--- a/app/src/main/res/layout/resuscitation.xml
+++ b/app/src/main/res/layout/resuscitation.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Resusitation"
+                android:text="Resuscitation"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#ffffff"
                 android:textSize="32dp"
