--- a/app/src/main/res/layout/medical_history.xml
+++ b/app/src/main/res/layout/medical_history.xml
@@ -30,7 +30,7 @@
                  android:text="History of Presenting Complaint"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:textColor="#ffffff"
-                 android:textSize="32dp"
+                 android:textSize="24dp"
                  android:textStyle="bold"
                  android:typeface="normal" />
 
@@ -66,7 +66,7 @@
                   android:text="Medical Conditions"
                   android:textAppearance="?android:attr/textAppearanceMedium"
                   android:textColor="#ffffff"
-                  android:textSize="32dp"
+                  android:textSize="24dp"
                   android:textStyle="bold"
                   android:typeface="normal" />
       
@@ -180,46 +180,7 @@
 
         </TableRow>
 
-         <TableRow
-             android:id="@+id/tableRow15"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content" >
 
-             <RelativeLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content" >
-
-                 <TextView
-                     android:id="@+id/textView14"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="FAST Test"
-                     android:textSize="18dp"
-                     android:textStyle="bold"
-                     android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                 <RadioGroup
-                     android:id="@+id/medical_history_fast"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_below="@id/textView14"
-                     android:orientation="horizontal" >
-
-                     <RadioButton
-                         android:id="@+id/medical_history_fast_yes"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:checked="false"
-                         android:text="Positive" />
-
-                     <RadioButton
-                         android:id="@+id/medical_history_fast_no"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:text="Negative" />
-                 </RadioGroup>
-             </RelativeLayout>
-         </TableRow>
         
           <TableRow
             android:id="@+id/tableRow8"
@@ -234,7 +195,7 @@
                   android:text="Known allergies"
                   android:textAppearance="?android:attr/textAppearanceMedium"
                   android:textColor="#ffffff"
-                  android:textSize="32dp"
+                  android:textSize="24dp"
                   android:textStyle="bold"
                   android:typeface="normal" />
       
@@ -259,19 +220,19 @@
 
 
           <TableRow
-            android:id="@+id/tableRow4"
+            android:id="@+id/tableRow41"
             android:layout_width="wrap_content"
             android:background="#000000"
             android:layout_height="wrap_content" >
 
               <TextView
-                  android:id="@+id/textView11"
+                  android:id="@+id/textView15"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="List Medication(s)"
                   android:textAppearance="?android:attr/textAppearanceMedium"
                   android:textColor="#ffffff"
-                  android:textSize="32dp"
+                  android:textSize="24dp"
                   android:textStyle="bold"
                   android:typeface="normal" />
       
@@ -293,6 +254,66 @@
                 android:minLines="3" />
 
         </TableRow>
+
+         <TableRow
+             android:id="@+id/tableRow4"
+             android:layout_width="wrap_content"
+             android:background="#000000"
+             android:layout_height="wrap_content" >
+
+             <TextView
+                 android:id="@+id/textView11"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="FAST Test with onset time"
+                 android:textAppearance="?android:attr/textAppearanceMedium"
+                 android:textColor="#ffffff"
+                 android:textSize="24dp"
+                 android:textStyle="bold"
+                 android:typeface="normal" />
+
+         </TableRow>
+
+         <TableRow
+             android:id="@+id/tableRow15"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content" >
+
+             <RelativeLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content" >
+
+
+                 <RadioGroup
+                     android:id="@+id/medical_history_fast"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:orientation="horizontal" >
+
+                     <RadioButton
+                         android:id="@+id/medical_history_fast_yes"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:checked="false"
+                         android:text="Positive" />
+
+                     <RadioButton
+                         android:id="@+id/medical_history_fast_no"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Negative" />
+                 </RadioGroup>
+
+                 <TimePicker
+                     android:id="@+id/fast_onset"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_centerVertical="true"
+                     android:layout_alignParentRight="true" />
+
+
+             </RelativeLayout>
+         </TableRow>
      
    </TableLayout>
     
